--- a/style.css
+++ b/style.css
@@ -271,34 +271,12 @@ footer {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-.carousel-image {
-  position: absolute;
-  top: 0;
-  left: 0;
+.carousel img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  opacity: 0;
-  transform: scale(1);
-  transition: opacity 1s ease, transform 3s ease;
 }
 
-.carousel-image.active {
-  opacity: 1;
-  animation: zoom 3s ease-in-out;
-}
-
-@keyframes zoom {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.05);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 
 @media (max-width: 768px) {
   .carousel {
