--- a/style.css
+++ b/style.css
@@ -269,36 +269,28 @@ footer {
   border: 5px solid #003366;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  --swiper-pagination-color: #003366;
+  --swiper-pagination-bullet-inactive-color: #003366;
+  --swiper-pagination-bullet-inactive-opacity: 0.3;
+  --swiper-pagination-bullet-size: 10px;
 }
 
-.carousel-image {
-  position: absolute;
-  top: 0;
-  left: 0;
+.carousel img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  opacity: 0;
-  transform: scale(1);
-  transition: opacity 1s ease, transform 3s ease;
 }
 
-.carousel-image.active {
-  opacity: 1;
-  animation: zoom 3s ease-in-out;
+.carousel .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes zoom {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.05);
-  }
-  100% {
-    transform: scale(1);
-  }
+.carousel .swiper-pagination-bullets {
+  bottom: 8px;
 }
+
 
 @media (max-width: 768px) {
   .carousel {
