--- a/style.css
+++ b/style.css
@@ -324,3 +324,9 @@ footer {
         justify-content: center;
     }
 }
+
+.section-compacta {
+    padding: 20px 20px; 
+    max-width: 1200px;
+    margin: auto;
+}
