--- a/style.css
+++ b/style.css
@@ -325,8 +325,7 @@ footer {
     }
 }
 
-.section-compacta {
-    padding: 20px 20px; 
-    max-width: 1200px;
-    margin: auto;
+#introduccion-academia {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
