--- a/style.css
+++ b/style.css
@@ -305,3 +305,9 @@ footer {
 .btn-academia:hover {
   background-color: #e65500;
 }
+
+#introduccion-academia {
+  padding-top: 10px;    
+  padding-bottom: 25px; 
+  text-align: center;
+}
