--- a/style.css
+++ b/style.css
@@ -106,20 +106,18 @@ nav a:hover {
 }
 
 .carousel img {
-  max-width: 100%;
-  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
-  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
 
 .carousel img.active {
-  display: block;
-  animation: fade 1s ease-in-out;
-}
-
-@keyframes fade {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  opacity: 1;
 }
 
 /* --- PRODUCTOS --- */
